--- a/src/rs/Cargo.toml
+++ b/src/rs/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pam_purpose_rs"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.75.0"
 
 [lib]
 crate-type = ["cdylib"] # Vigtigt: Kompiler som dynamisk bibliotek (.so)
